# libspectranstream

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  test_req.http
lib/: ArbitraryLengthCircularBuffer.cpp  ArbitraryLengthCircularBuffer.h  CMakeLists.txt  spectranstream.cpp  spectranstream.h  spectranstreamConfig.cmake.in
